# python-migration

./: README.md  alembic.ini  database.py  models.py  pyproject.toml
alembic/: models.py
configs/: settings.local.toml
migration/: env.py
migration/versions/: 20210221122803_f3e578cf134d_init.py  20210221123133_e1376d6927c0_change_column.py  20210221124305_e3eda40c3d84_change_column.py  20210221_124519_3c1fcb8b0cc0_change_order.py  20210221_124712_0e227b56a647_rename_name_to_title.py  20210221_125445_a570e2302197_add_status_enum.py  20210221_130637_7ff80522ffdc_add_status_enum.py  20210221_130825_2d56ad262302_add_status_enum.py
simple-db-migrate/: database.py
